--- a/test-ay.css
+++ b/test-ay.css
@@ -210,21 +210,64 @@ Colors:
   box-sizing: border-box;
 }
 
-body {
-  font: normal 14px/1.14 'Inter';
-  margin: 0;
-}
-
 img {
   display: block;
   width: 100%;
+}
+
+
+body {
+  font: normal 14px/1.14 'Inter';
+  margin: 0;
 }
 
 .form {
   display: block;
   width: 576px;
   margin: auto;
-  background: #F7F7F7;
+  background: rgba(0, 0, 0, 0.04);
+  padding: 11 0 0 24;
+}
+
+
+h1 {
+  font-size: 36px;
+  height: 43px;
+  color: #FCAB10;
+  text-align: center;
+  margin-top: 1;
+  margin-bottom: 1; 
+}
+
+.subtitle{
+  font-size: 12px;
+  height: 15px;
+  font-style:  italic;
+}
+
+.title .subtitle{
+  margin-top: 0;
+  text-align: center;
+  font-style: normal;
+}
+
+.fields {
+  padding-top: 11px;
+  padding-right : 98px;
+  padding-bottom: 24px;
+  padding-left : 98px;
+}
+
+.field {
+  line-height: 3;
+}
+
+div.title {
+  line-height: 20%;
+}
+
+div.subtitle {
+  line-height: 50%;
 }
 
 .ic {
@@ -233,7 +276,11 @@ img {
   height: 11px;
   background: url(ic-check.svg) no-repeat center/contain;
 }
-
+.label{
+  color:#1E1E1E;
+  opacity: 46%;
+  margin-top: 4px;
+}
 input,
 button {
   background: #fff;
@@ -241,6 +288,7 @@ button {
   border-radius: 4px;
   font-size: 12px;
   height: 38px;
+  margin-bottom: 4px;
 }
 
 button.selected:before {
@@ -249,6 +297,10 @@ button.selected:before {
   width: 11px;
   height: 11px;
   background: url(ic-check.svg) no-repeat center/contain;
+}
+
+button.selected{
+  border-color: #A1AF3E;
 }
 
 input {
@@ -274,6 +326,10 @@ input {
   width: 78px;
 }
 
+/*.field.field-dob .label {
+  margin-bottom: 16px;
+}*/
+
 .field .inputs.flex {
   display: flex;
   justify-content: space-between;
@@ -281,6 +337,11 @@ input {
 
 .field.field-col-3 button {
   width: 114px;
+  margin-bottom: 16px;
+}
+
+.field.field-col-3 .label {
+  margin-bottom: 8px;
 }
 
 .field.field-col-2 .inputs {
@@ -291,5 +352,41 @@ input {
 
 .field.field-col-2 button {
   width: 176px;
+  margin-bottom: 10px;
 }
 
+.field.field-col-7 .inputs{
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+}
+
+.field.field-col-7 button {
+  width: 48px;
+  margin: 0 0px;
+}
+
+.field.field-submit .inputs{
+  display: flex;
+  justify-content: center;
+}
+
+.field.field-submit button{
+  margin-top: 30px;
+  width: 380px;
+  background-color: #D7263D;
+  color: #F7F7F7;
+  height: 46px;
+}
+
+.field.field-reset .inputs{
+  display: flex;
+  justify-content: center;
+}
+
+.field.field-reset button{
+  background-color: #F7F7F7;
+  border-color: #F7F7F7;
+  color: #3C91E6;
+  text-decoration: underline;
+}
